fix img on mobile

--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -15,6 +15,11 @@
         position: relative;
         width: 100%;
         overflow: hidden;
+        margin-top: 90px;
+        @media (max-width: 992px) {
+            margin-top: 0;
+        }
+
         .carousel-item {
             position: relative;
             float: left;
